variables.Variables.scala.error
Compilation error:
Variables:9: error: not found: value dejaFait
while (dejaFait!=nbPas) {
       ^